; ModuleID = '/home/carl/AnghaBench/linux/drivers/leds/extr_leds-ss4200.c_register_nasgpio_led.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/leds/extr_leds-ss4200.c_register_nasgpio_led.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nasgpio_led = type { i32 }
%struct.TYPE_2__ = type { i32 }
%struct.led_classdev = type { i32, i32, i32, i32, i32 }

@nasgpio_leds = common dso_local global %struct.nasgpio_led* null, align 8
@LED_OFF = common dso_local global i32 0, align 4
@GP_LVL = common dso_local global i32 0, align 4
@LED_FULL = common dso_local global i32 0, align 4
@nasgpio_led_set_brightness = common dso_local global i32 0, align 4
@nasgpio_led_set_blink = common dso_local global i32 0, align 4
@nasgpio_led_groups = common dso_local global i32 0, align 4
@nas_gpio_pci_dev = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @register_nasgpio_led to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @register_nasgpio_led(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.nasgpio_led*, align 8
  %6 = alloca %struct.led_classdev*, align 8
  store i32 %0, i32* %3, align 4
  %7 = load %struct.nasgpio_led*, %struct.nasgpio_led** @nasgpio_leds, align 8
  %8 = load i32, i32* %3, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds %struct.nasgpio_led, %struct.nasgpio_led* %7, i64 %9
  store %struct.nasgpio_led* %10, %struct.nasgpio_led** %5, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call %struct.led_classdev* @get_classdev_for_led_nr(i32 %11)
  store %struct.led_classdev* %12, %struct.led_classdev** %6, align 8
  %13 = load %struct.nasgpio_led*, %struct.nasgpio_led** %5, align 8
  %14 = getelementptr inbounds %struct.nasgpio_led, %struct.nasgpio_led* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.led_classdev*, %struct.led_classdev** %6, align 8
  %17 = getelementptr inbounds %struct.led_classdev, %struct.led_classdev* %16, i32 0, i32 4
  store i32 %15, i32* %17, align 4
  %18 = load i32, i32* @LED_OFF, align 4
  %19 = load %struct.led_classdev*, %struct.led_classdev** %6, align 8
  %20 = getelementptr inbounds %struct.led_classdev, %struct.led_classdev* %19, i32 0, i32 3
  store i32 %18, i32* %20, align 4
  %21 = load %struct.led_classdev*, %struct.led_classdev** %6, align 8
  %22 = load i32, i32* @GP_LVL, align 4
  %23 = call i64 @nasgpio_led_get_attr(%struct.led_classdev* %21, i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %1
  %26 = load i32, i32* @LED_FULL, align 4
  %27 = load %struct.led_classdev*, %struct.led_classdev** %6, align 8
  %28 = getelementptr inbounds %struct.led_classdev, %struct.led_classdev* %27, i32 0, i32 3
  store i32 %26, i32* %28, align 4
  br label %29

29:                                               ; preds = %25, %1
  %30 = load i32, i32* @nasgpio_led_set_brightness, align 4
  %31 = load %struct.led_classdev*, %struct.led_classdev** %6, align 8
  %32 = getelementptr inbounds %struct.led_classdev, %struct.led_classdev* %31, i32 0, i32 2
  store i32 %30, i32* %32, align 4
  %33 = load i32, i32* @nasgpio_led_set_blink, align 4
  %34 = load %struct.led_classdev*, %struct.led_classdev** %6, align 8
  %35 = getelementptr inbounds %struct.led_classdev, %struct.led_classdev* %34, i32 0, i32 1
  store i32 %33, i32* %35, align 4
  %36 = load i32, i32* @nasgpio_led_groups, align 4
  %37 = load %struct.led_classdev*, %struct.led_classdev** %6, align 8
  %38 = getelementptr inbounds %struct.led_classdev, %struct.led_classdev* %37, i32 0, i32 0
  store i32 %36, i32* %38, align 4
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** @nas_gpio_pci_dev, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load %struct.led_classdev*, %struct.led_classdev** %6, align 8
  %42 = call i32 @led_classdev_register(i32* %40, %struct.led_classdev* %41)
  store i32 %42, i32* %4, align 4
  %43 = load i32, i32* %4, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %47

45:                                               ; preds = %29
  %46 = load i32, i32* %4, align 4
  store i32 %46, i32* %2, align 4
  br label %48

47:                                               ; preds = %29
  store i32 0, i32* %2, align 4
  br label %48

48:                                               ; preds = %47, %45
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local %struct.led_classdev* @get_classdev_for_led_nr(i32) #1

declare dso_local i64 @nasgpio_led_get_attr(%struct.led_classdev*, i32) #1

declare dso_local i32 @led_classdev_register(i32*, %struct.led_classdev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
